--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <html>
   <head>
     <title>Green Shoots - Generosity & Goodness Arising From the Pandemic </title>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
+    <script type='text/javascript'>
+  var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/1-1579CSDwbA8IIVbaycq2X_tgoZfxS3XHHZ0eckVJKQ/edit?usp=sharing';
+
+  function init() {
+    Tabletop.init( { key: publicSpreadsheetUrl,
+                     callback: showInfo,
+                     simpleSheet: true } )
+  }
+
+  function showInfo(data, tabletop) {
+    alert('Successfully processed!')
+    console.log(data);
+  }
+
+  window.addEventListener('DOMContentLoaded', init)
+</script>
   </head>
   <body>
     <h1>Green Shoots</h1>
     <h2>Generosity & Goodness Arising From the Pandemic</h2>
 
-    
+
   </body>
 </html>
