--- a/index.html
+++ b/index.html
@@ -1,28 +1,64 @@
 <html>
   <head>
     <title>Green Shoots - Generosity & Goodness Arising From the Pandemic </title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
     <script type='text/javascript'>
-  var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/1-1579CSDwbA8IIVbaycq2X_tgoZfxS3XHHZ0eckVJKQ/edit?usp=sharing';
+      var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/1-1579CSDwbA8IIVbaycq2X_tgoZfxS3XHHZ0eckVJKQ/edit?usp=sharing';
+      var content = {};
+      function init() {
+        Tabletop.init( { key: publicSpreadsheetUrl,
+                         callback: showInfo,
+                         simpleSheet: true } )
+      }
 
-  function init() {
-    Tabletop.init( { key: publicSpreadsheetUrl,
-                     callback: showInfo,
-                     simpleSheet: true } )
-  }
+      function showInfo(data, tabletop) {
+        content = data;
+        var item, anchor;
+        var count=0;
+        $.each( content, function( key, value ) {
+          $.each( value, function( key, value ) {
+            if(key=="URL (web link)") {
+              anchor = "<a href=" + value +"'>"
+            }
+            if(key=="Title / Headline") {
+              item = "<div class='item' id='item-" + count +"'><h3>" + anchor;
+              item += value
+              item += "</a></h3></div>"
+              console.log(key, item)
+              $("#submissions").append(item)
+            }
+            if(key=="Brief Description") {
+              item = "<div class='description'>"
+              item += value
+              item += "</div>"
+              console.log(key, item)
+              $("#item-" + count).append(item)
+              count++;
+            }
+          });
+        });
+      }
 
-  function showInfo(data, tabletop) {
-    alert('Successfully processed!')
-    console.log(data);
-  }
-
-  window.addEventListener('DOMContentLoaded', init)
-</script>
-  </head>
+      window.addEventListener('DOMContentLoaded', init)
+  </script>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Elsie+Swash+Caps:900|Roboto:400,700&display=swap" rel="stylesheet">
+  <style>
+    h1 {font-family: 'Elsie Swash Caps', cursive; font-size:3.2em}
+    h2 {font-family: 'Roboto:400', sans-serif; font-size:1.3em}
+    body {font-family: 'Roboto', sans-serif;padding:20px}
+    .item {padding:20px; margin-bottom:20px;background-color:#eeeeee;}
+    h3 {font-family: 'Roboto', sans-serif; font-weight:700;font-size:1.3em}
+    a {color:#FF2E93}
+  </style>
+</head>
   <body>
     <h1>Green Shoots</h1>
     <h2>Generosity & Goodness Arising From the Pandemic</h2>
+    <div id="submissions">
 
+    </div>
 
   </body>
 </html>
